fixing spacing

--- a/pokepuzzleladder/src/index.css
+++ b/pokepuzzleladder/src/index.css
@@ -251,8 +251,8 @@ img {
 
 .head > div {
   display: table-cell;
-  width: 60px;
-  height: 60px;
+  width: 61.5px;
+  height: 61.5px;
   margin: 4px;
   text-align: center;
   line-height: 60px;
